src/objects/Project_Charges__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applied_This_Charge_To_FA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply This Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applied_at_the_time_of_FCN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applied at the time of FCN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area_Type_Id__c</fullName>
        <label>Area Type Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brokerage_Applicable_on_this_charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brokerage Applicable on this charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brokerage_Based_on_Basic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brokerage Based on Basic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charge_Code1__c</fullName>
        <formula>Charge_Code__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charge</label>
        <referenceTo>Global_Charges__c</referenceTo>
        <relationshipLabel>Project Charges</relationshipLabel>
        <relationshipName>Project_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charge_Id__c</fullName>
        <label>Charge Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>Charge_Code__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Applicable_on_this_charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest Applicable on this charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Plan_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Plan Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Area_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Area Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>Project_Area_Type__c.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_Area_Type__c</referenceTo>
        <relationshipLabel>Project Charges</relationshipLabel>
        <relationshipName>Project_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <label>Project Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Charges</relationshipLabel>
        <relationshipName>Project_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registration charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>S_Charge_Bucket__c</fullName>
        <description>This is used for grouping the charges under appropriate headers while creating the cost sheet/ quotations</description>
        <label>Charge Bucket</label>
        <picklist>
            <picklistValues>
                <fullName>Agreement Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Society Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stamp Duty and Registration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>S_Charge_Calculated_As__c</fullName>
        <label>Charge Calculated As</label>
        <picklist>
            <picklistValues>
                <fullName>Rate List at Unit Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lumpsum at Project Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher of Ready Reckoner or Agreement Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher of Ready Reckoner or Flatcost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage of Agreement Value</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>S_Charge_Percentage__c</fullName>
        <description>For charges which are a percentage of some value [say the Ready Reckoner or flat cost]</description>
        <label>Charge %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>S_Lumpsum_Charge_Amount__c</fullName>
        <label>Lumpsum Charge Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_Payable_At__c</fullName>
        <label>Payable At</label>
        <picklist>
            <picklistValues>
                <fullName>As per the payment milestone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Possession</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Applicable_on_this_charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Tax Applicable on this charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Tax_Percentage__c</fullName>
        <label>Service Tax Percentage</label>
        <picklist>
            <picklistValues>
                <fullName>Service Tax 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Tax 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Tax 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Tax 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Tax SBH-W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Tax SBH-B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Tax SW-B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Tax Test Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Tax Mudra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GST-18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GST-0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GST-5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subvention_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subvention Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Field__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Field</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Project Charges</label>
    <nameField>
        <label>Project Charges Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Charges</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>